--- a/191/index.html
+++ b/191/index.html
@@ -22,15 +22,16 @@
 <ul>
 <li><a href="#org6f420db">1. 笔记</a>
 <ul>
-<li><a href="#org35166ee">1.1. 2024-03-15 14:52:53</a></li>
-<li><a href="#orgd102dc4">1.2. 2024-03-15 08:30:49</a></li>
-<li><a href="#orga76909f">1.3. 2024-03-12 09:46:16</a></li>
-<li><a href="#org55e7c0e">1.4. 2024-03-08 08:40:26</a></li>
-<li><a href="#org1e73e0a">1.5. 2024-01-15 (寒假作业)</a></li>
-<li><a href="#orgb4d145b">1.6. 2024-01-15 (期末分数)</a></li>
-<li><a href="#org74d06bc">1.7. 2023-12-25 (任务)</a></li>
-<li><a href="#orga9f8e56">1.8. 2023-10-30 (任务)</a></li>
-<li><a href="#org857fc3a">1.9. 2023-09-11 (任务)</a></li>
+<li><a href="#org06bb2ea">1.1. 2024-03-19 09:32:31</a></li>
+<li><a href="#org35166ee">1.2. 2024-03-15 14:52:53</a></li>
+<li><a href="#orgd102dc4">1.3. 2024-03-15 08:30:49</a></li>
+<li><a href="#orga76909f">1.4. 2024-03-12 09:46:16</a></li>
+<li><a href="#org55e7c0e">1.5. 2024-03-08 08:40:26</a></li>
+<li><a href="#org1e73e0a">1.6. 2024-01-15 (寒假作业)</a></li>
+<li><a href="#orgb4d145b">1.7. 2024-01-15 (期末分数)</a></li>
+<li><a href="#org74d06bc">1.8. 2023-12-25 (任务)</a></li>
+<li><a href="#orga9f8e56">1.9. 2023-10-30 (任务)</a></li>
+<li><a href="#org857fc3a">1.10. 2023-09-11 (任务)</a></li>
 </ul>
 </li>
 <li><a href="#org9279aab">2. 练习题</a>
@@ -65,9 +66,13 @@
 <h2 id="org6f420db"><span class="section-number-2">1.</span> 笔记</h2>
 <div class="outline-text-2" id="text-1">
 </div>
+<div id="outline-container-org06bb2ea" class="outline-3">
+<h3 id="org06bb2ea"><span class="section-number-3">1.1.</span> 2024-03-19 09:32:31</h3>
+</div>
+
 <div id="outline-container-org35166ee" class="outline-3">
-<h3 id="org35166ee"><span class="section-number-3">1.1.</span> 2024-03-15 14:52:53</h3>
-<div class="outline-text-3" id="text-1-1">
+<h3 id="org35166ee"><span class="section-number-3">1.2.</span> 2024-03-15 14:52:53</h3>
+<div class="outline-text-3" id="text-1-2">
 <p>
 Winform练习题:
 </p>
@@ -103,8 +108,8 @@ Winform练习题:
 </div>
 
 <div id="outline-container-orgd102dc4" class="outline-3">
-<h3 id="orgd102dc4"><span class="section-number-3">1.2.</span> 2024-03-15 08:30:49</h3>
-<div class="outline-text-3" id="text-1-2">
+<h3 id="orgd102dc4"><span class="section-number-3">1.3.</span> 2024-03-15 08:30:49</h3>
+<div class="outline-text-3" id="text-1-3">
 <p>
 翻转字符串，参考代码：
 </p>
@@ -143,12 +148,53 @@ Winform练习题:
 <li>优化代码，让其更加高效合理 (stringbuilder)</li>
 <li>在主程序中，增加逻辑，让代码一直执行。除非输入了【退出】，程序结束</li>
 </ol>
+
+<details><summary>参考答案</summary>
+
+<p>
+优化效率:
+</p>
+<div class="org-src-container">
+<pre class="src src-csx"><span class="linenr">1: </span><span style="color: #005a5f;">StringBuilder</span> <span style="color: #00538b;">result</span> = <span style="color: #5317ac;">new</span> <span style="color: #005a5f;">StringBuilder</span><span style="color: #000000;">()</span>;
+<span class="linenr">2: </span><span style="color: #5317ac;">for</span> <span style="color: #000000;">(</span><span style="color: #005a5f;">int</span> <span style="color: #00538b;">i</span> = input.Length - 1; i &gt;= 0; i--<span style="color: #000000;">)</span>
+<span class="linenr">3: </span><span style="color: #000000;">{</span>
+<span class="linenr">4: </span>    result = result.<span style="color: #721045;">Append</span><span style="color: #a8007f;">(</span>input<span style="color: #005f88;">[</span>i<span style="color: #005f88;">]</span><span style="color: #a8007f;">)</span>;
+<span class="linenr">5: </span><span style="color: #000000;">}</span>
+<span class="linenr">6: </span><span style="color: #5317ac;">return</span> result.<span style="color: #721045;">ToString</span><span style="color: #000000;">()</span>;
+</pre>
+</div>
+
+<p>
+增加循环和退出:
+</p>
+<div class="org-src-container">
+<pre class="src src-csx"><span class="linenr"> 1: </span><span style="color: #5317ac;">while</span> <span style="color: #000000;">(</span><span style="color: #0000c0;">true</span><span style="color: #000000;">)</span>
+<span class="linenr"> 2: </span><span style="color: #000000;">{</span>
+<span class="linenr"> 3: </span>    <span style="color: #505050;">// </span><span style="color: #505050;">1. &#29992;&#25143;&#36755;&#20837;&#23383;&#31526;&#20018;</span>
+<span class="linenr"> 4: </span>    Console.<span style="color: #721045;">Write</span><span style="color: #a8007f;">(</span><span style="color: #2544bb;">"&#35831;&#36755;&#20837;&#24744;&#35201;&#25805;&#20316;&#30340;&#23383;&#31526;&#20018;: "</span><span style="color: #a8007f;">)</span>;
+<span class="linenr"> 5: </span>    <span style="color: #005a5f;">string</span> <span style="color: #00538b;">input</span> = Console.<span style="color: #721045;">ReadLine</span><span style="color: #a8007f;">()</span>;
+<span class="linenr"> 6: </span>
+<span class="linenr"> 7: </span>    <span style="color: #505050;">// </span><span style="color: #505050;">&#21028;&#23450;&#26159;&#19981;&#26159;&#35201;&#32467;&#26463;</span>
+<span class="linenr"> 8: </span>    <span style="color: #5317ac;">if</span> <span style="color: #a8007f;">(</span>input == <span style="color: #2544bb;">"&#36864;&#20986;"</span> || input == <span style="color: #2544bb;">"tuichu"</span><span style="color: #a8007f;">)</span>
+<span class="linenr"> 9: </span>    <span style="color: #a8007f;">{</span>
+<span class="linenr">10: </span>        <span style="color: #5317ac;">break</span>;
+<span class="linenr">11: </span>    <span style="color: #a8007f;">}</span>
+<span class="linenr">12: </span>
+<span class="linenr">13: </span>    <span style="color: #505050;">// </span><span style="color: #505050;">2. &#27714;&#21462;&#32763;&#36716;&#30340;&#23383;&#31526;&#20018;</span>
+<span class="linenr">14: </span>    <span style="color: #005a5f;">string</span> <span style="color: #00538b;">output</span> = <span style="color: #721045;">ReverseString</span><span style="color: #a8007f;">(</span>input<span style="color: #a8007f;">)</span>;
+<span class="linenr">15: </span>
+<span class="linenr">16: </span>    <span style="color: #505050;">// </span><span style="color: #505050;">3. &#36755;&#20986;&#23383;&#31526;&#20018;</span>
+<span class="linenr">17: </span>    Console.<span style="color: #721045;">WriteLine</span><span style="color: #a8007f;">(</span>$<span style="color: #2544bb;">"&#32763;&#36716;&#21518;&#30340;&#32467;&#26524;&#26159;: {output}"</span><span style="color: #a8007f;">)</span>;
+<span class="linenr">18: </span><span style="color: #000000;">}</span>
+</pre>
+</div>
+</details>
 </div>
 </div>
 
 <div id="outline-container-orga76909f" class="outline-3">
-<h3 id="orga76909f"><span class="section-number-3">1.3.</span> 2024-03-12 09:46:16</h3>
-<div class="outline-text-3" id="text-1-3">
+<h3 id="orga76909f"><span class="section-number-3">1.4.</span> 2024-03-12 09:46:16</h3>
+<div class="outline-text-3" id="text-1-4">
 <p>
 99乘法表，实际上跟倒三角的题目是一样的:
 </p>
@@ -160,8 +206,8 @@ Winform练习题:
 </div>
 
 <div id="outline-container-org55e7c0e" class="outline-3">
-<h3 id="org55e7c0e"><span class="section-number-3">1.4.</span> 2024-03-08 08:40:26</h3>
-<div class="outline-text-3" id="text-1-4">
+<h3 id="org55e7c0e"><span class="section-number-3">1.5.</span> 2024-03-08 08:40:26</h3>
+<div class="outline-text-3" id="text-1-5">
 <p>
 要干啥:
 </p>
@@ -181,14 +227,14 @@ Winform练习题:
 </div>
 
 <div id="outline-container-org1e73e0a" class="outline-3">
-<h3 id="org1e73e0a"><span class="section-number-3">1.5.</span> 2024-01-15 (寒假作业)</h3>
-<div class="outline-text-3" id="text-1-5">
+<h3 id="org1e73e0a"><span class="section-number-3">1.6.</span> 2024-01-15 (寒假作业)</h3>
+<div class="outline-text-3" id="text-1-6">
 <p>
 完成下面图示的题目:
 </p>
 
 
-<figure id="orgc84db2b">
+<figure id="org8629f84">
 <img src="img/191-3338282.png" alt="191-3338282.png">
 
 </figure>
@@ -204,8 +250,8 @@ Winform练习题:
 </div>
 
 <div id="outline-container-orgb4d145b" class="outline-3">
-<h3 id="orgb4d145b"><span class="section-number-3">1.6.</span> 2024-01-15 (期末分数)</h3>
-<div class="outline-text-3" id="text-1-6">
+<h3 id="orgb4d145b"><span class="section-number-3">1.7.</span> 2024-01-15 (期末分数)</h3>
+<div class="outline-text-3" id="text-1-7">
 <table>
 
 
@@ -457,8 +503,8 @@ Winform练习题:
 
 
 <div id="outline-container-org74d06bc" class="outline-3">
-<h3 id="org74d06bc"><span class="section-number-3">1.7.</span> 2023-12-25 (任务)</h3>
-<div class="outline-text-3" id="text-1-7">
+<h3 id="org74d06bc"><span class="section-number-3">1.8.</span> 2023-12-25 (任务)</h3>
+<div class="outline-text-3" id="text-1-8">
 <p>
 使用 Winform 实现一个 BMI 计算的应用。要求布局合理，美观大方
 </p>
@@ -466,8 +512,8 @@ Winform练习题:
 </div>
 
 <div id="outline-container-orga9f8e56" class="outline-3">
-<h3 id="orga9f8e56"><span class="section-number-3">1.8.</span> 2023-10-30 (任务)</h3>
-<div class="outline-text-3" id="text-1-8">
+<h3 id="orga9f8e56"><span class="section-number-3">1.9.</span> 2023-10-30 (任务)</h3>
+<div class="outline-text-3" id="text-1-9">
 <p>
 创建类 Device，描述设备的基本信息并添加基本控制
 </p>
@@ -475,8 +521,8 @@ Winform练习题:
 </div>
 
 <div id="outline-container-org857fc3a" class="outline-3">
-<h3 id="org857fc3a"><span class="section-number-3">1.9.</span> 2023-09-11 (任务)</h3>
-<div class="outline-text-3" id="text-1-9">
+<h3 id="org857fc3a"><span class="section-number-3">1.10.</span> 2023-09-11 (任务)</h3>
+<div class="outline-text-3" id="text-1-10">
 <p>
 创建 helloworld、编译、运行，独立完成
 </p>
